templates/ldap/ldap-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: $MY_DEPLOYMENT
  namespace: $MY_PROJECT
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: $MY_DEPLOYMENT
  template:
    metadata:
      labels:
        deployment: $MY_DEPLOYMENT
    spec:
      volumes:
        - name: ldap-db-main
          persistentVolumeClaim:
            claimName: pvc-ldap-main
        - name: ldap-db-config
          persistentVolumeClaim:
            claimName: pvc-ldap-config
      containers:
          name: $MY_DEPLOYMENT
          image: osixia/openldap          
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 389
              protocol: TCP
            - containerPort: 636
              protocol: TCP
          volumeMounts:
            - name: ldap-db-main
              mountPath: /var/lib/ldap
            - name: ldap-db-config
              mountPath: /etc/ldap/slapd.d
