templates/ldap/ldap_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $MY_LDAP_DEPLOYMENT
  namespace: $VAR_LDAP_NAMESPACE
  labels:
    app: $MY_LDAP_DEPLOYMENT
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $MY_LDAP_DEPLOYMENT
  template:
    metadata:
      labels:
        app: $MY_LDAP_DEPLOYMENT
    spec:
      serviceAccountName: $MY_LDAP_SERVICEACCOUNT
      containers:
      - name: openldap
        image: ${MY_LDAP_IMAGE}
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 389
          protocol: TCP
        - containerPort: 636
          protocol: TCP
        volumeMounts:
        - name: ldap-data
          mountPath: /var/lib/ldap
        - name: ldap-config
          mountPath: /etc/ldap/slapd.d
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      restartPolicy: Always
      volumes:
      - name: ldap-data
        persistentVolumeClaim:
          claimName: ${MY_LDAP_PVC_MAIN}
      - name: ldap-config
        persistentVolumeClaim:
          claimName: ${MY_LDAP_PVC_CONFIG}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
