templates/ldap/ldap_deployment_k8s-00.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      serviceAccountName: ldapaccount
      containers:
        - name: openldap
          image: osixia/openldap:1.5.0
          ports:
            - containerPort: 389
            - containerPort: 636
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
            privileged: true
