templates/ldap/ldap_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${VAR_LDAP_SERVICE}
  namespace: $VAR_LDAP_NAMESPACE
  labels:
    app: $MY_LDAP_DEPLOYMENT
spec:
  selector:
    app: $MY_LDAP_DEPLOYMENT
  ports:
    - name: ldap
      port: 389
      protocol: TCP
      targetPort: 389
    - name: ldaps
      port: 636
      protocol: TCP
      targetPort: 636
  type: NodePort
